# quant-factor-research

./: .gitignore  FACTOR_FIX_SUMMARY.md  HERMES_AGENT.md  PERFORMANCE_OPTIMIZATION.md  QuantLab.command  README.md  cli.py  debug_factor_ic.py  docker-compose.yml  quantlab  run_backtest.py  run_comparison_experiment.py  run_factor_evaluation.py  run_fast_comparison.py  stress_test.py  test_new_factors.py  test_single_factor.py
backend/: Dockerfile  __init__.py  pyproject.toml
backend/agents/: __init__.py  base_agent.py  coordinator.py  fundamental_agent.py  macro_agent.py  news_agent.py  sentiment_agent.py  technical_agent.py
backend/app/: __init__.py  tasks.py
backend/app/services/: __init__.py  alpha191_backtest.py  alpha191_factors.py  alpha191_optimizer.py  alpha191_research.py  alpha191_v7.py  alpha191_v8.py  (+21 more)
backend/autotrader/: __init__.py  engine.py  risk.py  rules.py  run.py  scheduler.py
backend/backtest/: __init__.py  engine.py  enhanced_metrics.py  metrics.py  portfolio.py
backend/config/: agents.yaml  settings.yaml
backend/factors/: __init__.py  alpha158.py  factor_miner.py  fast_scanner.py
backend/models/: __init__.py  lstm_model.py  rl_model.py  transformer_model.py
backend/notify/: __init__.py  pushplus.py
backend/reports/: 全局回测报告_20260627_2220.md
backend/strategies/: __init__.py  factor_strategy.py  ma_cross_strategy.py  mean_reversion_strategy.py  momentum_strategy.py  multi_factor_strategy.py  optimizer.py  user_strategy.py
backend/trading/: __init__.py  paper_account.py
backend/user_strategies/: _template.py  my_strategy.py
(+98 files in other folders)
