[project]
name = "quantlab-backend"
version = "0.2.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<2.3",
    "pyarrow>=18,<23",
    "scipy>=1.14,<2",
    "ta-cn[cn]==0.5.2",
    "TA-Lib>=0.6.8,<1",
    "numba>=0.60,<1",
    "bottleneck>=1.3,<2",
    "requests>=2.32,<3",
    "akshare>=1.16",
    "baostock>=0.8.9",
    "loguru>=0.7",
    "rich>=13,<14",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-cov>=6,<7"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
